--- a/.project
+++ b/.project
@@ -69,12 +69,21 @@
 	</linkedResources>
 	<filteredResources>
 		<filter>
-			<id>1405362636916</id>
+			<id>1415503349547</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-name-matches-false-false-ArduinoCorePatches</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1415503349549</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-RepRapFirmware.ino</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
