Added missing cores directory
And updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 *.d
 *.o
-Release/*
-!Release/RepRapFirmware*.bin
 *~
 *orig
 /Release/
-arduino
+!Release/RepRapFirmware*.bin
+/arduino
 .*
 spec.d
